Don't use java 9 method